# ComfyUI-WanVideoWrapper_FlowEdit

./: .gitignore  flowedit_nodes.py  fp8_optimization.py  nodes.py  pyproject.toml  readme.md  requirements.txt  utils.py
configs/: transformer_config_i2v.json
example_workflows/: wanvideo_480p_I2V_example_01.json  wanvideo_T2V_example_01.json  wanvideo_vid2vid_example_01.json
wanvideo/: wan_video_vae.py
wanvideo/distributed/: xdit_context_parallel.py
wanvideo/modules/: __init__.py  attention.py  clip.py  model.py  t5.py
