[project]
name = "ComfyUI-WanVideoWrapper"
description = "ComfyUI diffusers wrapper nodes for WanVideo"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["accelerate >= 1.2.1", "diffusers >= 0.31.0", "ftfy"]

[project.urls]
Repository = "https://github.com/kijai/ComfyUI-WanVideoWrapper"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "kijai"
DisplayName = "ComfyUI-WanVideoWrapper"
Icon = ""
